--- a/color.html
+++ b/color.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="refresh" content="1">
   <link rel="stylesheet" href="./public/css/style.css" />
   <link rel="stylesheet" href="./public/css/color.css">
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
@@ -54,29 +55,28 @@
       </div>
     </div>
   </nav>
-  <div class="ALL">
-    <div class="Title">
-        <h1 id="content">Game Color</h1>
+  <div class="Title">
+    <h1 id="content">Game Color</h1>
     <div class="card">
       <button onclick="a()">CLICK ME TO PLAY!!</button>
       <h2>สีที่มีให้ทาย</h2>
-        <img src=" Color.jpg" alt="Avatar">
-        <div class="container">
-          <table class="table">
-             <tr>
-                 <td>
-                  <h2 id="one"></h2>
-                  <h2 id="answer"></h2>
-                  <h2 id="two"></h2>
-                  <h2 id="round"></h2>
-                 </td>
-             </tr>
-          </table>
-         </div>
+      <img src=" Color.jpg" alt="Avatar">
+      <div>
+        <table class="table">
+          <tr>
+            <td>
+              <h2 id="one"></h2>
+              <h2 id="answer"></h2>
+              <h2 id="two"></h2>
+              <h2 id="round"></h2>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </div>
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="./public/js/color.js"></script>
 
 </html>
-
