--- a/resume2.html
+++ b/resume2.html
@@ -81,7 +81,7 @@
             </p>
 
             <div>
-                <img style="border-radius: 50%" class="img-fluid h-96"
+                <img class="img-fluid h-96"
                     src="https://i.pinimg.com/736x/56/c5/6d/56c56dd4343e635ae3d99735ef4f1645.jpg"
                     alt="This incident will be reported" />
             </div>
@@ -195,11 +195,11 @@
                                     Learn the basics of Anatomy and Chemical element in human body.
                                 </li>
                                 <li>
-                                    
+
                                 </li>
                             </ul>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
@@ -319,9 +319,9 @@
                             </div>
                             <div class="rounded-md shadow">
                                 <button type="submit"
-                                  class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg">Send
-                                  message
-                              </div>
+                                    class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg">Send
+                                    message
+                            </div>
                         </form>
                     </div>
                 </div>
