--- a/calc.html
+++ b/calc.html
@@ -16,7 +16,8 @@
       margin-top: 50px;
       background-color: antiquewhite;
     }
-    body{
+
+    body {
       color: black;
     }
   </style>
@@ -27,7 +28,7 @@
     <div class="container mx-auto flex flex-wrap items-center justify-between">
       <a href="index.html" class="flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="h-6 w-6 text-sky-900 hover:opacity-60">
+          class="h-6 w-6 text-white hover:opacity-60">
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
         </svg>
@@ -47,44 +48,44 @@
         <ul class="flex flex-col p-4 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:text-sm md:font-medium">
           <li>
             <a href="./backgroound.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
           </li>
           <li>
             <a href="./balloon.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
           </li>
           <li>
             <a href="./color.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">ColorR</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">ColorR</a>
           </li>
           <li>
             <a href="./grader.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-black hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Grader</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Grader</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <div class="content" style="border: 3px solid black; padding: 50px">
-  <form id="valuecal">
-    <div>
-      <input type="text" name="ftext" />
-    </div>
-    <div>
-      <input type="text" name="stext" />
-    </div>
-    <select name="symbol">
-      <option value="+">+</option>
-      <option value="-">-</option>
-      <option value="*">*</option>
-      <option value="/">/</option>
-      <option value="%">%</option>
-    </select>
-    <div>
-      <button name="calcu" type="submit">Try me!</button>
-    </div>
-  </form>
-</div>
+    <form id="valuecal">
+      <div>
+        <input type="text" name="ftext" />
+      </div>
+      <div>
+        <input type="text" name="stext" />
+      </div>
+      <select name="symbol">
+        <option value="+">+</option>
+        <option value="-">-</option>
+        <option value="*">*</option>
+        <option value="/">/</option>
+        <option value="%">%</option>
+      </select>
+      <div>
+        <button name="calcu" type="submit">Try me!</button>
+      </div>
+    </form>
+  </div>
   <script>
     let inp = document.getElementById("valuecal");
     let {
