--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <a class="mt-12 " href="./calc.html">Calculator</a>
           <a class="mt-12 " href="./balloon.html">Balloon</a>
           <a class="mt-12 " href="./backgroound.html">Background</a>
-          <a class="mt-12 " href="./color.html">Color</a>
+          <a class="mt-12 " href="./todolist.html">Todolist</a>
         </div>
       </div>
     </div>
