--- a/resume2.html
+++ b/resume2.html
@@ -309,15 +309,16 @@
                   </li>
                 </ul>
               </div>
+            </div>
+          </div>
+        </div>
         <section id="skills" class="skills section-bg">
           <div class="container" data-aos="fade-right">
             <div>
               <h2 class="mt-4 pt-4 text-center text-5xl font-bold text-sky-900">
                 Skills
               </h2>
-              <div
-                class="relative mb-4 mt-4 flex items-center justify-center py-2"
-              >
+              <div class="relative mb-4 mt-4 flex items-center justify-center py-2">
                 <div class="w-8 border-2 border-gray-400"></div>
                 <div class="w-12 border-4 border-sky-700"></div>
                 <div class="w-8 border-2 border-gray-400"></div>
@@ -331,8 +332,7 @@
               <span class="mx-4 flex-shrink text-gray-400">Content</span>
               <div class="flex-grow border-t border-gray-400"></div>
             </div>
-            <div
-              class="skills-content flex flex-col pt-4 lg:grid lg:grid-cols-2 lg:flex-row"
+            <div class="skills-content flex flex-col pt-4 lg:grid lg:grid-cols-2 lg:flex-row"
             >
               <div class="lg:col-span-1 lg:mr-2">
                 <div class="progress">
