--- a/backgroound.html
+++ b/backgroound.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./public/css/backgroound.css" />
-  <link rel="stylesheet" href="./public/css/bgjava.css">
+  <link rel="stylesheet" href="./public/css/bgjavascript.css">
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
   <title>Background</title>
 </head>
