--- a/calc.html
+++ b/calc.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./public/css/style.css" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-  <link rel="stylesheet" href="./public/css/bgjava.css">
+  <link rel="stylesheet" href="./public/css/bgjavascript.css">
   <title>Calculator</title>
   <style>
     .content {
@@ -56,7 +56,7 @@
           </li>
           <li>
             <a href="./todolist.html"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
           </li>
           <li>
             <a href="./grader.html"
