--- a/backgroound.html
+++ b/backgroound.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./public/css/backgroound.css" />
   <link rel="stylesheet" href="./public/css/bgjavascript.css">
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
   <title>Background</title>
 </head>
 
 <body>
-  <nav id="navbar" class="sticky top-0 z-10 rounded bg-sky-900 px-2 py-2 dark:bg-gray-900 sm:px-4" data-aos="fade-down">
+  <nav id="navbar" class="sticky top-0 z-10 rounded" data-aos="fade-down">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
       <a href="index.html" class="flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -74,5 +73,6 @@
   </script>
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 
 </html>
