--- a/calc.html
+++ b/calc.html
@@ -24,11 +24,11 @@
 </head>
 
 <body>
-  <nav id="navbar" class="sticky top-0 z-10 rounded bg-sky-900 px-2 py-2 dark:bg-gray-900 sm:px-4" data-aos="fade-down">
+  <nav id="navbar" class="sticky top-0 z-10 rounded" data-aos="fade-down">
     <div class="container mx-auto flex flex-wrap items-center justify-between">
       <a href="index.html" class="flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-          class="h-6 w-6 text-white hover:opacity-60">
+          class="h-6 w-6 text-white hover:opacity-80">
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
         </svg>
@@ -138,5 +138,6 @@
   </script>
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 
 </html>
