--- a/resume2.html
+++ b/resume2.html
@@ -23,7 +23,7 @@
     />
     <link href="public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link href="public/css/resume1.css" rel="stylesheet" />
+    <link href="public/css/resume.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css"
@@ -553,6 +553,6 @@
     <script src="public/js/main.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-    <script src="./public/js/resume1.js"></script>
+    <script src="./public/js/resume.js"></script>
   </body>
 </html>
