--- a/calc.html
+++ b/calc.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./public/css/style.css" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-  <link rel="stylesheet" href="./public/css/bgjavascript.css">
   <title>Calculator</title>
   <style>
     .content {
@@ -19,6 +18,9 @@
 
     body {
       color: black;
+      background-image:url("./public/img/sun.gif");
+      background-size: cover;
+      
     }
   </style>
 </head>
@@ -48,19 +50,19 @@
         <ul class="flex flex-col p-4 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:text-sm md:font-medium">
           <li>
             <a href="./backgroound.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
           </li>
           <li>
             <a href="./balloon.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
-          </li>
-          <li>
-            <a href="./todolist.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Balloon</a>
           </li>
           <li>
             <a href="./grader.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Grader</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Grader</a>
+          </li>
+          <li>
+            <a href="./todolist.html"
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
           </li>
         </ul>
       </div>
