--- a/grader.html
+++ b/grader.html
@@ -9,7 +9,6 @@
   <title>Grader</title>
   <link rel="stylesheet" href="./public/css/background.css" />
   <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-  <link rel="stylesheet" href="./public/css/bgjavascript.css">
   <style>
     .content {
       width: fit-content;
@@ -20,7 +19,11 @@
 
     body {
       color: black;
+      background-image:url("./public/img/LK-bg.gif");
+      background-size: cover;
+      
     }
+
   </style>
 </head>
 
@@ -35,7 +38,7 @@
         </svg>
       </a>
       <button data-collapse-toggle="navbar-default" type="button"
-        class="ml-3 inline-flex items-center rounded-lg p-2 text-sm text-gray-50 hover:bg-sky-600 md:dark:hover:bg-transparent focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 md:hidden"
+        class="ml-3 inline-flex items-center rounded-lg p-2 text-sm text-white hover:bg-sky-600 md:dark:hover:bg-transparent focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-600 md:hidden"
         aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="h-6 w-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -49,19 +52,19 @@
         <ul class="flex flex-col p-4 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:text-sm md:font-medium">
           <li>
             <a href="./backgroound.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
           </li>
           <li>
             <a href="./balloon.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Ballon</a>
           </li>
           <li>
             <a href="./calc.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">ColorR</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
           </li>
           <li>
             <a href="./todolist.html"
-              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
+              class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
           </li>
         </ul>
       </div>
