--- a/balloon.html
+++ b/balloon.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-    <link rel="stylesheet" href="./public/css/bgjavascript.css">
     <title>Balloon</title>
 </head>
 
@@ -19,6 +18,14 @@
             border-radius: 50%;
             display: inline-block;
         }
+        body {
+        color: white;
+        background-image:url("./public/img/first.jpg");
+        background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+      
+    }
     </style>
     <nav id="navbar" class="sticky top-0 z-10 rounded" data-aos="fade-down">
         <div class="container mx-auto flex flex-wrap items-center justify-between">
@@ -43,22 +50,22 @@
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
                 <ul class="flex flex-col p-4 md:mt-0 md:flex-row md:space-x-8 md:border-0 md:text-sm md:font-medium">
                     <li>
-                        <a href="./backgroound.html"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
+                      <a href="./backgroound.html"
+                        class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">RandBg</a>
                     </li>
                     <li>
-                        <a href="./calc.html"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
+                      <a href="./calc.html"
+                        class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Calculator</a>
                     </li>
                     <li>
-                        <a href="./todolist.html"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
+                      <a href="./grader.html"
+                        class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Grader</a>
                     </li>
                     <li>
-                        <a href="./grader.html"
-                            class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Grader</a>
+                      <a href="./todolist.html"
+                        class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white">Todolist</a>
                     </li>
-                </ul>
+                  </ul>
             </div>
         </div>
     </nav>
