--- a/resume1.html
+++ b/resume1.html
@@ -73,7 +73,7 @@
   <section id="home" class="flex flex-col justify-center">
     <div id="layout" class="stars -z-10"></div>
     <div class="container flex flex-col items-center justify-center" data-aos="flip-left" data-aos-delay="200">
-      <h1 class="font-sans text-6xl font-bold text-sky-700">Resume 1</h1>
+      <h1 class="text-6xl font-bold text-sky-700">Resume 1</h1>
       <p class="my-3 text-3xl font-semibold text-sky-600">
         Name:
         <span class="typed" data-typed-items="Pakorn Tantiwutthiphat"></span>
@@ -86,13 +86,13 @@
       </div>
       <div class="social-links mt-4">
         <a href="https://www.facebook.com/prite.pakorn" class="facebook m-2" target="_blank"><i
-            class="bx bxl-facebook text-5xl text-sky-600"></i></a>
+            class="bx bxl-facebook text-5xl text-sky-600 hover:opacity-70"></i></a>
         <a href="https://www.instagram.com/prite_.to/" class="instagram m-2" target="_blank"><i
-            class="bx bxl-instagram text-5xl text-sky-600"></i></a>
+            class="bx bxl-instagram text-5xl text-sky-600 hover:opacity-70"></i></a>
         <a href="https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/" class="linkedin m-2" target="_blank"><i
-            class="bx bxl-linkedin text-5xl text-sky-600"></i></a>
+            class="bx bxl-linkedin text-5xl text-sky-600 hover:opacity-70"></i></a>
         <a href="https://www.youtube.com/watch?v=OoQLoKHhohg" class="discord m-2" target="_blank"><i
-            class="bx bxl-discord text-5xl text-sky-600"></i></a>
+            class="bx bxl-discord text-5xl text-sky-600 hover:opacity-70"></i></a>
       </div>
     </div>
   </section>
@@ -432,18 +432,19 @@
       </p>
       <div class="social-links">
         <a href="https://www.facebook.com/prite.pakorn" class="facebook" target="_blank"><i
-            class="bx bxl-facebook"></i></a>
+            class="bx bxl-facebook hover:opacity-70"></i></a>
         <a href="https://www.instagram.com/prite_.to/" class="instagram" target="_blank"><i
-            class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/" class="linkedin" target="_blank"><i
-            class="bx bxl-linkedin"></i></a>
-        <a href="https://www.youtube.com/watch?v=OoQLoKHhohg" class="discord" target="_blank"><i
-            class="bx bxl-discord"></i></a>
+            class="bx bxl-instagram hover:opacity-70"></i></a>
+        <a href=" https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/" class="linkedin" target="_blank"><i
+            class="bx bxl-linkedin hover:opacity-70"></i></a>
+        <a href=" https://www.youtube.com/watch?v=OoQLoKHhohg" class="discord" target="_blank"><i
+            class="bx bxl-discord hover:opacity-70"></i></a>
       </div>
     </div>
   </footer>
 
-  <div id="preloader"></div>
+  <div id=" preloader">
+  </div>
   <a href="#" class="back-to-top flex items-center justify-center"><i>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="h-6 w-6">
