--- a/resume2.html
+++ b/resume2.html
@@ -17,7 +17,7 @@
     <link href="public/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
     <link href="public/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <link href="public/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    <link href="public/css/resume.css" rel="stylesheet" />
+    <link href="public/css/resume2.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 </head>
